# scrape-solana

./: Cargo.toml  flake.nix
generic-ref/: Cargo.toml
generic-ref/src/: lib.rs
generic-vec/: Cargo.toml
generic-vec/src/: lib.rs  slicish.rs  slicish_mut.rs
huge-vec/: Cargo.toml
huge-vec/src/: chunk.rs  chunk_cache.rs  lib.rs  lock_manager.rs
huge-vec/src/store/: chunk_io.rs  errors.rs  metadata.rs  mod.rs  stored_chunk.rs
mmap-vec/src/: lib.rs  segment.rs  utils.rs
mmap-vec/tests/: test_segment.rs  test_vec.rs  test_vec_builder.rs  utils.rs
scrape-solana/: Cargo.toml
scrape-solana/src/: crc_checksum_serde.rs  huge_map.rs  lib.rs  main.rs  mmap_map.rs  model.rs  solana_api.rs
scrape-solana/src/actors/: block_fetcher.rs  block_handler.rs  db.rs  db_full_healer.rs  db_gap_healer.rs  mod.rs
scrape-solana/src/actors/db_full_healer/: mod.rs  sparse_block_db.rs
scrape-solana/src/db/: huge_map.rs  mod.rs  model.rs
scrape-solana/src/db/monotonous_block_db/: block_iter.rs  mod.rs  model.rs
scrape-solana/src/huge_vec/: chunk.rs  chunk_cache.rs  io_transformer.rs  mod.rs  prefetch_storage.rs  storage.rs
scrape-solana/src/workers/: block_fetcher.rs  block_handler.rs  db.rs  mod.rs
src/: main.rs
vector-trees/: Cargo.toml
vector-trees/src/: btree.rs  lib.rs  vector.rs
