[package]
name = "scrape-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
ctrlc = "3.4.4"
eyre = "0.6.12"
mmap-vec = { path = "./mmap-vec"}
solana-client = "2.0.1"
solana-rpc-client-api = "2.0.1"
solana-sdk = "2.0.1"
