[workspace]
resolver = "2"

members = [
    "mmap-vec",
    "vector-trees",
    "scrape-solana"
]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package.mmap-vec]
overflow-checks = true

[profile.release.package.vector-trees]
overflow-checks = true

[profile.release.package.scrape-solana]
overflow-checks = true
