[workspace]
resolver = "2"

members = ["vector-trees", "scrape-solana", "generic-ref", "generic-vec", "huge-vec"]

[profile.release]
debug = true

[profile.release.package.vector-trees]
overflow-checks = true

[profile.release.package.scrape-solana]
overflow-checks = true

[profile.release.package.generic-ref]
overflow-checks = true

[profile.release.package.generic-vec]
overflow-checks = true

[profile.release.package.huge-vec]
overflow-checks = true
