[package]
name = "scrape-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
crc = "3.2.1"
ctrlc = "3.4.4"
eyre = "0.6.12"
nonmax = { version = "0.5.5", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
solana-client = "2.0.1"
solana-sdk = "2.0.1"
solana-transaction-status = "2.0.1"
tempdir = "0.3.7"
thiserror = "1.0.63"
vector-trees = { path = "../vector-trees", features = ["std", "serde"] }
zstd = "0.13.2"
