[package]
name = "scrape-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crc = "3.2.1"
ctrlc = "3.4.5"
eyre = "0.6.12"
itertools = "0.13.0"
nonmax = { version = "0.5.5", features = ["serde"] }
rand = "0.8.5"
rayon = "1.10.0"
rustix = { version = "1.0.3", features = ["fs"] }
serde = { version = "1.0.213", features = ["derive"] }
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
tempfile = "3.13.0"
thiserror = "1.0.65"
vector-trees = { path = "../vector-trees", features = ["std", "serde"] }
zstd = "0.13.2"

[dev-dependencies]
rand_xorshift = { version = "0.3.0" }
tempdir = "0.3.7"
