[package]
name = "scrape-solana"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
crc = "3.2.1"
ctrlc = "3.4.5"
eyre = "0.6.12"
itertools = "0.14.0"
nonmax = { version = "0.5.5", features = ["serde"] }
rand = "0.9"
rayon = "1.10.0"
rustix = { version = "1.0.3", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.1.16"
solana-sdk = "2.1.16"
solana-transaction-status = "2.1.16"
tempfile = "3.19.1"
thiserror = "2.0.12"
vector-trees = { path = "../vector-trees", features = ["std", "serde"] }
zstd = "0.13.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
rand_xorshift = { version = "0.4.0" }
tempdir = "0.3.7"
